--- a/devfile.yaml
+++ b/devfile.yaml
@@ -3,7 +3,7 @@ metadata:
   name: ws-development-py
   namespace: leslie-fleming-che-ft209u
 projects:
-  - name: ws-development-py
+  - name: python-hello-world
     zip:
       location: 'http://devfile-registry.openshift-operators.svc:8080/resources/v2/python-hello-world.zip'
 components: []
