--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,18 +1,26 @@
 schemaVersion: 2.1.0
 metadata:
   name: ws-development-py
-  namespace: leslie-fleming-che-ft209u
-projects:
-  - name: python-hello-world
-    zip:
-      location: 'http://devfile-registry.openshift-operators.svc:8080/resources/v2/python-hello-world.zip'
-components: []
+components:
+  - name: tools
+    container:
+      image: quay.io/devfile/universal-developer-image:ubi8-0e189d9
+      volumeMounts:
+        - name: venv
+          path: /home/user/.venv
+      memoryLimit: 1024Mi
+      mountSources: true
+
+  - name: venv
+    volume:
+      size: 1G
+
 commands:
-  - exec:
-      commandLine: python3 hello-world.py
+  - id: run-application
+    exec:
+      label: "Run application"
       component: tools
+      workingDir: ${PROJECT_SOURCE}
+      commandLine: "python3 hello-world.py"
       group:
         kind: run
-      label: Run application
-      workingDir: '${PROJECT_SOURCE}'
-    id: run-application
