--- a/devfile.yaml
+++ b/devfile.yaml
@@ -6,15 +6,42 @@ projects:
   - name: python-hello-world
     zip:
       location: 'http://devfile-registry.openshift-operators.svc:8080/resources/v2/python-hello-world.zip'
-components: 
-    - name: tools
+components:
+  - attributes:
+      app.kubernetes.io/name: tools
+      che-theia.eclipse.org/vscode-extensions:
+        - 'https://github.com/microsoft/vscode-python/releases/download/2020.7.94776/ms-python-release.vsix'
     container:
-      image: quay.io/devfile/universal-developer-image:ubi8-0e189d9
+      args:
+        - sh
+        - '-c'
+        - '${PLUGIN_REMOTE_ENDPOINT_EXECUTABLE}'
+      env:
+        - name: PLUGIN_REMOTE_ENDPOINT_EXECUTABLE
+          value: /remote-endpoint/plugin-remote-endpoint
+        - name: THEIA_PLUGINS
+          value: 'local-dir:///plugins/sidecars/tools'
+        - name: CHE_DASHBOARD_URL
+          value: 'https://che-openshift-operators.apps.k8s.corp.elbicon.com'
+        - name: CHE_PLUGIN_REGISTRY_URL
+          value: 'https://che-openshift-operators.apps.k8s.corp.elbicon.com/plugin-registry/v3'
+        - name: CHE_PLUGIN_REGISTRY_INTERNAL_URL
+          value: 'http://plugin-registry.openshift-operators.svc:8080/v3'
+      image: 'quay.io/devfile/universal-developer-image:ubi8-0e189d9'
+      memoryLimit: 1024Mi
+      mountSources: true
+      sourceMapping: /projects
       volumeMounts:
         - name: venv
           path: /home/user/.venv
-      memoryLimit: 1024Mi
-      mountSources: true
+        - name: remote-endpoint
+          path: /remote-endpoint
+        - name: plugins
+          path: /plugins
+    name: tools
+  - name: venv
+    volume:
+      size: 1G
 commands:
   - exec:
       commandLine: python3 hello-world.py
