--- a/devfile.yaml
+++ b/devfile.yaml
@@ -3,7 +3,7 @@ metadata:
   name: ws-development-py
   namespace: leslie-fleming-che-ft209u
 projects:
-  - name: ws-development-py
+  - name: python-hello-world
     zip:
       location: 'http://devfile-registry.openshift-operators.svc:8080/resources/v2/python-hello-world.zip'
 components:
@@ -31,6 +31,13 @@ components:
       memoryLimit: 1024Mi
       mountSources: true
       sourceMapping: /projects
+      volumeMounts:
+        - name: venv
+          path: /home/user/.venv
+        - name: remote-endpoint
+          path: /remote-endpoint
+        - name: plugins
+          path: /plugins
     name: tools
   - name: venv
     volume:
